Updated index.html for more clarity

--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
                     
                     <div class="about-description">
                         <p>With a background in Computer Science from Manipal Institute of Technology, my journey spans from working as an undergraduate research assistant and publishing papers to interning as a Data Engineer and later contributing to Shell's Cyber Defence team. Over time, I've built experience in Machine Learning, Computer Vision, Data Pipelining, and Security, applying these skills across both academic and industry projects.</p>
-                        <p>I enjoy exploring new ideas, whether through research in computer vision and social networks or by competing in cybersecurity tournaments like Boss of the SOC. For me, the most exciting part of technology is the constant opportunity to learn, collaborate, and create solutions that make a difference.</p>
+                        <p>I enjoy exploring new ideas, whether through research in computer vision or by competing in cybersecurity tournaments like Boss of the SOC. For me, the most exciting part of technology is the constant opportunity to learn, collaborate, and create solutions that make a difference.</p>
                     </div>
                     
                     <div class="cta-buttons">
