Update: Added a project

--- a/index.html
+++ b/index.html
@@ -1137,6 +1137,41 @@
                     </div>
                 </div>
             </div>
+            <!-- Kissan Mitra (Farmer's Friend)-->
+            <div class="project-card">
+                <div class="project-header">
+                    <div class="project-icon">
+                        <i class="fas fa-seedling"></i>
+                    </div>
+                    <span class="featured-badge">AI for Social Impact</span>
+                </div>
+                <div class="project-body">
+                    <h3 class="project-title">Kissan Mitra (Farmer's Friend)</h3>
+                    <p class="project-summary">Voice-enabled AI agricultural advisory system for Indian farmers</p>
+                    <div class="project-details">
+                        <p class="project-description">Developed a multilingual voice AI assistant to bridge information gaps for 86% of India's farming community. Built serverless architecture supporting Hindi, Tamil, Telugu, Bengali, and Marathi with real-time agricultural data integration.</p>
+                        <ul class="project-highlights">
+                            <li>Implemented OpenAI Voice Agents with AWS Lambda serverless architecture</li>
+                            <li>Built knowledge graph combining vector databases with IMD weather and AGMARKNET pricing APIs</li>
+                            <li>Created ETL pipelines for real-time irrigation, pest management, and crop pricing decisions</li>
+                            <li>Designed multilingual NLP pipeline supporting 5 regional Indian languages</li>
+                        </ul>
+                    </div>
+                    <div class="project-links">
+                        <a href="#" target="_blank" class="project-link">
+                            <i class="fab fa-github"></i> View on GitHub
+                        </a>
+                    </div>
+                    <div class="project-tech">
+                        <span class="tech-tag">AWS Lambda</span>
+                        <span class="tech-tag">OpenAI Voice API</span>
+                        <span class="tech-tag">Knowledge Graphs</span>
+                        <span class="tech-tag">DynamoDB</span>
+                        <span class="tech-tag">NLP</span>
+                        <span class="tech-tag">Vector Databases</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
